Crash while opening .blend file made with older version #56020

Closed
opened 2018-07-17 22:37:51 +02:00 by Frans Slothouber · 3 comments

street_0045.blend

System Information

Ubuntu 16.04 / Mesa DRI Intel(R) HD Graphics 520 (Skylake GT2)

Blender Version

Broken: 2.80 Hash dc3b3d9453

Short description of error

Crash while trying to open blend file

Exact steps for others to reproduce the error

Just open the attached .blend file

backtrace

./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(BLI_system_backtrace+0x20) [0x19d2ba0]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender() [0x1010618]
/lib/x86_64-linux-gnu/libc.so.6(+0x354b0) [0x7fa8bdea24b0]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender() [0x19d20a5]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(BLI_uniquename_cb+0x35) [0x19d27b5]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(BLI_uniquename+0x37) [0x19d2917]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(BKE_workspace_layout_add+0x6a) [0x182d75a]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(do_versions_after_linking_280+0x599) [0x163ff89]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(blo_read_file_internal+0x9c0) [0x1630f50]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(BLO_read_from_file+0x39) [0x161d679]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(BKE_blendfile_read+0x3a) [0x16bed5a]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(WM_file_read+0x11f) [0x101cc8f]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender() [0x101e061]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender() [0x101613f]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender() [0x1018cc0]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender() [0x101911c]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(wm_event_do_handlers+0x211) [0x10196b1]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(WM_main+0x20) [0x1011130]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(main+0x31d) [0xfb28fd]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf0) [0x7fa8bde8d830]
./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender() [0x100d31e]

[street_0045.blend](https://archive.blender.org/developer/F3980479/street_0045.blend) **System Information** Ubuntu 16.04 / Mesa DRI Intel(R) HD Graphics 520 (Skylake GT2) **Blender Version** Broken: 2.80 Hash dc3b3d94538 **Short description of error** Crash while trying to open blend file **Exact steps for others to reproduce the error** Just open the attached .blend file # backtrace ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(BLI_system_backtrace+0x20) [0x19d2ba0] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender() [0x1010618] /lib/x86_64-linux-gnu/libc.so.6(+0x354b0) [0x7fa8bdea24b0] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender() [0x19d20a5] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(BLI_uniquename_cb+0x35) [0x19d27b5] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(BLI_uniquename+0x37) [0x19d2917] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(BKE_workspace_layout_add+0x6a) [0x182d75a] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(do_versions_after_linking_280+0x599) [0x163ff89] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(blo_read_file_internal+0x9c0) [0x1630f50] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(BLO_read_from_file+0x39) [0x161d679] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(BKE_blendfile_read+0x3a) [0x16bed5a] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(WM_file_read+0x11f) [0x101cc8f] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender() [0x101e061] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender() [0x101613f] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender() [0x1018cc0] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender() [0x101911c] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(wm_event_do_handlers+0x211) [0x10196b1] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(WM_main+0x20) [0x1011130] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender(main+0x31d) [0xfb28fd] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf0) [0x7fa8bde8d830] ./blender-2.80-dc3b3d94538-linux-glibc219-x86_64/blender() [0x100d31e]

Added subscriber: @frans67

Added subscriber: @frans67
Bastien Montagne self-assigned this 2018-07-26 10:32:21 +02:00

This issue was referenced by 27567a6c76

This issue was referenced by 27567a6c760be523b77e4d95e544c60b6f9ddf84

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56020
No description provided.