Fix T56020: Crash while opening .blend file made with older version.

We need a NULL workspace check here, in some cases we get a SRTemp
screen even though it's not tagged as temp...